=======
CHANGES
=======

0.10.0 (unreleased)
-------------------

- Added support for recurring payable items.
  [jpg.rcom, davisagli]

- Added missing dependency declaration for getpaid.nullpayment.
  [davisagli]

- Added conditional imports to test files and various fixes for Plone 4 compatibility.
  [taito.horiuchi]

- Added icon_expr to controlpanel.xml.
  [taito.horiuchi]

0.9.1 (2010-04-07)
------------------

- Added missing dependency declarations for five.intid, ore.viewlet and
  yoma.batching.
  [davisagli]

0.9.0 (2010-04-07)
------------------

- Updated templates for compatibility with Plone 4 in addition to Plone 3.
  [davisagli, azazel]

- Removed various bits of BBB code for Zope 2.9 and Plone 2.5, which have not
  been supported for a while already.
  [davisagli, azazel]

- Removed registration of the Payable object tab as a Zope 3 browser menu
  (which was BBB for Plone 2.5 and doesn't work with CMF 2.2)
  [davisagli]

- Added various conditional imports for Plone 4 compatibility.
  [taito.horiuchi, davisagli]

0.8.8 (2010-02-02)
------------------
- Rebundle again with upgraded setuptools

0.8.7 (2010-02-01)
------------------
- Rebundle to fix missing files

0.8.6 (2010-01-21)
------------------
- Add a workaround for free shipping bug (#274)
- Fix a broken test by updating the year

0.8.5 (2009-07-28)
------------------
- Allow users to change the opt-in language through the settings panel. [larubbio]

0.8.4 (2009-07-23)
------------------
- Add the new GetPaidSalesforceOrderRecorder to plugins.xml [larubbio]

0.8.3 (2009-07-22)
------------------
- Add a new 'multishot' cart.  Currently used with getpaid.formgen so sibling adapters can access the cart used for single page checkouts. [larubbio]

0.8.2 (2009-07-10)
------------------
- Rollback the 'fix' for $0 shipping since it causes the shipping cost to be displayed to the user, but not charged.

0.8.1 (2009-07-07)
------------------
- Add shipping cost to the new emails [larubbio]